Pagina 6 Raffles construida en Html y Css

--- a/information.html
+++ b/information.html
@@ -16,6 +16,7 @@
                 <a class="a" href="./contact.html">Contact</a>
                 <a class="a" href="#">More Information</a>
                 <a class="a" href="./benefitsTips.html">Benefits and Tips</a>
+                <a class="a" href="./raffle.html">Raffle</a>
             </div>
             <div class="nav-div-img">
                 <a class="nav-div-a" href="./index.html">
