--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./Css/style.css">
     <title>Home - Snowy Cream</title>
 </head>
-
+<body>
     <header>
         <nav class="nav">
             <div class="nav-div">
@@ -16,6 +16,7 @@
                 <a class="a" href="./contact.html">Contact</a>
                 <a class="a" href="./information.html">More Information</a>
                 <a class="a" href="./benefitsTips.html">Benefits and Tips</a>
+                <a class="a" href="./raffle.html">Raffle</a>
             </div>
             <div class="nav-div-img">
                 <a class="nav-div-a" href="./index.html">
