Ejercicio completo Sprint3 con los tres breackpoint de media queeris

--- a/raffle.html
+++ b/raffle.html
@@ -19,9 +19,7 @@
                 <a class="a" href="#">Raffle</a>
             </div>
             <div class="nav-div-img">
-                <a class="nav-div-a" href="./index.html">
-                    <img  class="nav-img" src="./Imagenes/IceCream/logo.png" alt="Logo Snowy Cream">
-                </a>
+               
             </div>
         </nav>
         <div class="titles">
@@ -44,7 +42,7 @@
                 Our location is located at:
             </h2>
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423284.0441008969!2d-118.74137339025394!3d34.02060846900968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20%C3%81ngeles%2C%20California%2C%20EE.%20UU.!5e0!3m2!1ses!2sco!4v1697767519369!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423284.0441008969!2d-118.74137339025394!3d34.02060846900968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20%C3%81ngeles%2C%20California%2C%20EE.%20UU.!5e0!3m2!1ses!2sco!4v1697767519369!5m2!1ses!2sco"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <div class="form">
@@ -85,7 +83,7 @@
                 <textarea name="message" id="text"></textarea>
                 <br>
                 <input type="checkbox" name="terms" id="terms-conditions">
-                <label for="terms-conditions"> I accept terms and conditions ...</label>
+                <label for="terms-conditions"> I accept terms and conditions...</label>
                 <input class="send" type="submit" value="Send">
 
             </form>
