--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,7 @@
                 <a class="a" href="./raffle.html">Raffle</a>
             </div>
             <div class="nav-div-img">
-                <a class="nav-div-a" href="./index.html">
-                    <img  class="nav-img" src="./Imagenes/IceCream/logo.png" alt="Logo Snowy Cream">
-                </a>
+                
             </div>
         </nav>
         <div class="titles">
@@ -48,14 +46,17 @@
         </p>
 
         <div class="p3-container">
-            <a class="p3-container-mail a" href="mailto:snowycream@m.com?Subject=Place%20your%20order%20here">Send us your order by email</a>
+            <div class="p3-container-data">
+                    <img class="img-a-mail" src="./Imagenes/IceCream/mail.png" alt="logo email">
+                    <a class="p3-container-a" href="mailto:snowycream@m.com?Subject=Place%20your%20order%20here">
+                        Send us your order by email</a>
+            </div>
+           
+            <div class="p3-container-data">
+                <img class="img-a-wpp" src="./Imagenes/IceCream/whatsapp.png" alt="Logo Whatsapp">
+                <a  class="p3-container-a" href="https://wa.me/0112331"> Contact for Whatsapp</a>
+            </div>
 
-            <img class="img-a-mail" src="./Imagenes/IceCream/mail.png" alt="logo email">
-
-
-            <a  class="p3-container-wpp a" href="https://wa.me/0112331">Contact for Whatsapp</a>
-
-            <img class="img-a-wpp"  src="./Imagenes/IceCream/whatsapp.png" alt="Logo Whatsapp">
         </div>
     </main>
 
