Modificacion en raffle.html

--- a/raffle.html
+++ b/raffle.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="form">
-            <form class="formulario" action="" method="get">
+            <form class="formulario" action="#" method="get">
                 <label for="first-name">First Name</label>
                 <br>
                 <input type="text">
