Correcion de errores en Validador

--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
     </header>
 
     <main>
-        <section class="section-place-order">
+        <div class="section-place-order">
             <img class="place-order" src="./Imagenes/IceCream/place_order.gif" alt="Place your order">
-        </section>
+        </div>
       
 
         <p class="place-order-p">
