--- a/raffle.html
+++ b/raffle.html
@@ -49,25 +49,25 @@
             <form class="formulario" action="#" method="get">
                 <label for="first-name">First Name</label>
                 <br>
-                <input type="text">
+                <input type="text" id="first-name">
                 <br>
-                <label for="last-name">Last-name</label>
+                <label for="last-name">Last name</label>
                 <br>
-                <input type="text">
+                <input type="text" id="last-name">
                 <br>
                 <label for="plataforms">Choose Meet or Zoom</label>
                 <br>
-                <input list="plataforms" name="plataform" >
-                <datalist id="plataforms">
+                <input list="plataform" id="plataforms" name="plataform" >
+                <datalist id="plataform">
                     <option value="Meet">
                     <option value="Zoom">
                 </datalist>
                 <br>
-                <label for="date">Choose a date</label>
+                <label for="dates">Choose a date</label>
                 <br>
-                <input class="date" type="date">
+                <input class="date" type="date" id="dates">
                 <br>
-                <label for="pay">Payment Options</label>
+                <label>Payment Options</label>
                 <br>
                 <input type="radio" id="cash" name="payment" value="CASH">
                 <label class="cash" for="cash">Cash</label>
