--- a/contact.html
+++ b/contact.html
@@ -48,13 +48,13 @@
         <div class="p3-container">
             <div class="p3-container-data">
                     <img class="img-a-mail" src="./Imagenes/IceCream/mail.png" alt="logo email">
-                    <a class="p3-container-a" href="mailto:snowycream@m.com?Subject=Place%20your%20order%20here">
+                    <a class="p3-container-a" href="mailto:snowycream@m.com?Subject=Place%20your%20order%20here" target="_blank" > 
                         Send us your order by email</a>
             </div>
            
             <div class="p3-container-data">
                 <img class="img-a-wpp" src="./Imagenes/IceCream/whatsapp.png" alt="Logo Whatsapp">
-                <a  class="p3-container-a" href="https://wa.me/0112331"> Contact for Whatsapp</a>
+                <a  class="p3-container-a" href="https://wa.me/0112331" target="_blank"> Contact for Whatsapp</a>
             </div>
 
         </div>
