--- a/raffle.html
+++ b/raffle.html
@@ -57,11 +57,17 @@
                 <br>
                 <label for="plataforms">Choose Meet or Zoom</label>
                 <br>
-                <input list="plataform" id="plataforms" name="plataform" >
+                <select name="plataform" id="plataforms">
+                    <option value="#">---Selecciona una Opción---</option>
+                    <option value="Meet">Meet</option>
+                    <option value="Zoom">Zoom</option>
+                </select>
+                
+                <!-- <input list="plataform" id="plataforms" name="plataform" >
                 <datalist id="plataform">
                     <option value="Meet">
                     <option value="Zoom">
-                </datalist>
+                </datalist> -->
                 <br>
                 <label for="dates">Choose a date</label>
                 <br>
